--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "flatten-include-yaml",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Roundtrip YAML files using yaml-include to flatten them.",
   "main": "index.js",
   "bin": {
-    "defcode": "index.js"
+    "flatten-include-yaml": "index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
